# OCR_HELPER

./: .gitignore  README.md  language.qrc  logo.rc  main.cpp  meson.build  meson.options  resources.qrc
i18n/: en_US.ts
include/: CustomGraphicsView.h  OcrWorker.h  constants.h  mainwindow.h
src/: CustomGraphicsView.cpp  OcrWorker.cpp  mainwindow.cpp
subprojects/OcrLiteOnnx/: meson.build
subprojects/OcrLiteOnnx/include/: OcrLiteCApi.h
subprojects/OcrLiteOnnx/lib/: OcrLiteOnnx.lib
subprojects/RapidOcrOnnx/: meson.build
subprojects/RapidOcrOnnx/lib/: RapidOcrOnnx.lib
ui/: mainwindow.ui
